Formatted the pages a little
Page Details, Task Detail,

--- a/public/templates/tab-add.html
+++ b/public/templates/tab-add.html
@@ -31,7 +31,7 @@
 				</label>
  -->
 				<label class="item item-input">
-					<textarea ng-model="task.description" placeholder="Details" maxlength="500" style="height:100px; font-family:'Open Sans'; font-size:16px;"></textarea>
+					<textarea ng-model="task.description" placeholder="Details" maxlength="500" style="height:100px; font-family:'Open Sans'; font-size: 16px !important;"></textarea>
 				</label>
 			</div>
 		</div>
