--- a/public/css/hivesuggested.css
+++ b/public/css/hivesuggested.css
@@ -122,6 +122,8 @@ body {
 
 .item-icon-right > .icon {
   z-index: 4;
+  font-size: 20px;
+  margin-right:5px;
 }
 
 .task-title {
@@ -165,8 +167,9 @@ body {
 
 .date-title {
 	float: right;
+	margin-top: 7px;
 	display: inline;
-	font-size: 15px; 
+	font-size: 16px; 
 	vertical-align: middle;
 }
 
@@ -181,7 +184,8 @@ body {
 	color: #aaa8a7; /*light gray color */
 	float: right;
 	display: inline;
-	font-size: 15px; 
+	font-size: 17px; 
+	margin-top: 7px;
 	vertical-align: middle;
 }
 
@@ -211,6 +215,7 @@ body {
 
 input[type="text"], textarea {
 	font-family: 'Open Sans';
+	font-size: 16px !important;
 }
 
 
@@ -284,10 +289,10 @@ input[type="time"] {
 /* Tasks Details */
 
 .task-detail-endorsed {
-	 float: left;
+	 float: right;
 	display: inline;
 	font-size: 14px; 
-	padding-top: 20px;
+/*	padding-top: 20px;*/
 	font-family: 'Open Sans';
 
 }
@@ -300,22 +305,27 @@ input[type="time"] {
 }
 
 .task-detail-title {
-	font-size:25px;
+	font-size:22px;
 	display: inline;
 	padding-right: 10px;
 	font-family: 'Open Sans';
 	font-family: 'Open Sans';
 }
 
+#message {
+	margin-top: 0px;
+}
+
 #task-details {
-	font-size: 20px;
+	font-size: 18px;
 	padding-top: 15px;
 	font-family: 'Open Sans';
 
 }
 .trash {
 	background-color: #5C97BF !important;
-	padding:7px !important;
+	text-align: center;
+	padding-left: 24px !important;
 }
 .task-detail-date {
 	font-size:15px;
@@ -343,6 +353,10 @@ input[type="time"] {
  	text-decoration: none;
  		color: white;
  }
+
+.card {
+	margin-bottom: 9px !important;
+}
 
 .ion-trash-a {
 	font-size: 18px !important;
