--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -12,7 +12,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<link href="../ionic/css/ionic.css" rel="stylesheet">
 	<link href="../ionicons/css/ionicons.css" rel="stylesheet">
-	<link href="stylesheet" href="css/welcome.css">
+	<link rel="stylesheet" href="css/welcome.css">
 	<link rel="stylesheet" type="text/css" media="only screen and (min-height: 550px), only screen and (max-device-height: 575px)" href="css/medium-device.css" />
 	<link rel="stylesheet" type="text/css" media="only screen and (max-width: 330px), only screen and (max-device-width: 330px)" href="css/small-device.css" />
 
