MADE THINGS SEXY
i got rid of my margin and paddings. sigh don’t do fix padding guys

--- a/public/css/hivesuggested.css
+++ b/public/css/hivesuggested.css
@@ -140,10 +140,7 @@ body {
 }
 
 .tasks {
-	padding-top:5px;
-	margin-top: -3px;
-/*	display: inline;
-*/	margin:0 auto;
+	margin:0 auto;
 }
 
 .tasks-left {
