changed endorsed message

--- a/public/templates/tab-shared.html
+++ b/public/templates/tab-shared.html
@@ -34,7 +34,7 @@
                     <div class="course">{{task.class.name}}</div>
                     <div class="date">{{task.due_date}}</div>
                     <div class="endorsed">
-                        <span class="ion-checkmark-round">{{task.endorsed_message}}</span>
+                        <span class="ion-person-stalker">{{task.endorsed_message}}</span>
                     </div>
                     <div style="margin-left: auto; margin-right: auto; text-align: center; padding-bottom:10px; padding-top:5px;">
                         <div class= "action-buttons">
