completed tasks page

--- a/public/templates/tab-tasks.html
+++ b/public/templates/tab-tasks.html
@@ -96,7 +96,7 @@
 
 			<div class="padding">
 			<div class="card" style="text-align: center; margin-left: auto; margin-right: auto;">
-		  	<a class="item positive" href="#">
+		  	<a class="item positive" href="#/app/tasks/completed">
 			    <i class="icon ion-checkmark-circled"></i> Show Completed Tasks
 		  	</a>
 		  	</div>
