added upcoming and completed icons

--- a/public/templates/tasks-completed.html
+++ b/public/templates/tasks-completed.html
@@ -2,7 +2,7 @@
 	<ion-content>
 		<!-- Completed Tasks -->
 		<div class="item item-divider">
-			<ion class="ion-calendar" style="padding-right:3px;"></ion> Completed
+			<ion class="ion-checkmark-circled" style="padding-right:3px;"></ion> Completed
 		</div>
 
 
