added icon for upcoming

--- a/public/templates/tab-tasks.html
+++ b/public/templates/tab-tasks.html
@@ -51,6 +51,7 @@
 
 			<!-- Upcoming -->
 			<div class="item item-divider">
+				<ion class="icon ion-android-stopwatch" style="padding-right:3px;"></ion> Upcoming
 			</div>
 
 			<ion-item ng-repeat="userTask in upcoming" id="task{{userTask._id}}" class="item item-checkbox item-icon-right">
