Change the format of detail page

--- a/public/templates/tasks-detail.html
+++ b/public/templates/tasks-detail.html
@@ -29,9 +29,9 @@
 		  </div>
 		  	</div>	
 		    <div  ng-click="deleteTask(task)" class="task-detail-delete">
-		    <button  class="button button-large trash">
+		    <button  class="button button-medium trash" style="width:113px !important;">
 		    <a class="item-icon trash-button" href="#">
-		      <i class="icon ion-trash-a" style="margin-left:-3px;"> Delete</i>
+		      <i class="icon ion-trash-a" style="margin-left:-13px !important;"> Delete</i>
 		    </a>
 		    </button>
 		</div>
