--- a/public/css/hivesuggested.css
+++ b/public/css/hivesuggested.css
@@ -286,7 +286,7 @@ input[type="time"] {
 /* Tasks Details */
 
 .task-detail-endorsed {
-	 float: right;
+	 float: left;
 	display: inline;
 	font-size: 14px; 
 /*	padding-top: 20px;*/
@@ -302,7 +302,7 @@ input[type="time"] {
 }
 
 .task-detail-title {
-	font-size:22px;
+	font-size:20px;
 	display: inline;
 	padding-right: 10px;
 	font-family: 'Open Sans';
@@ -314,7 +314,7 @@ input[type="time"] {
 }
 
 #task-details {
-	font-size: 18px;
+	font-size: 17px;
 	padding-top: 15px;
 	font-family: 'Open Sans';
 
@@ -325,7 +325,7 @@ input[type="time"] {
 	padding-left: 24px !important;
 }
 .task-detail-date {
-	font-size:15px;
+	font-size:14px;
 	padding-right: 10px;
 	padding-top: 2px;
 	font-family: 'Open Sans';
